Revolved issues with offscreen nav and burger button

--- a/_sass/_aside.scss
+++ b/_sass/_aside.scss
@@ -14,6 +14,7 @@ aside {
 	z-index: 1000;
 	@include media($tablet) {
 		background: transparent;
+		width: 10%;
 	}
 }
 
@@ -31,6 +32,9 @@ aside {
 		top: 1em;
 		display: none;
 		background: url(../img/burger-cross.svg) no-repeat 0 0;
+		-webkit-background-size: 200% 100% ;
+		-o-background-size: 200% 100% ;
+		background-size: 200% 100% ;
 		background-color: inherit;
 		@include size(20px);
 		border: 0;		
@@ -84,27 +88,27 @@ aside {
 	}
 	
 	.rentals-icon {
-		background: url("../img/rentals_icon.svg") no-repeat center center;	
+		background: url("../img/aside/rentals_icon.svg") no-repeat center center;	
 	}
 
 	.servicing-icon {
-		background: url("../img/servicing_icon.svg") no-repeat center center;	
+		background: url("../img/aside/servicing_icon.svg") no-repeat center center;	
 	}
 	
 	.rides-icon {
-		background: url("../img/rides_icon.svg") no-repeat center center;	
+		background: url("../img/aside/rides_icon.svg") no-repeat center center;	
 	}
 	
 	.tours-icon {
-		background: url("../img/tours_icon.svg") no-repeat center center;	
+		background: url("../img/aside/tours_icon.svg") no-repeat center center;	
 	}
 
 	.events-icon {
-		background: url("../img/events_icon.svg") no-repeat center center;	
+		background: url("../img/aside/events_icon.svg") no-repeat center center;	
 	}
 
 	.contact-icon {
-		background: url("../img/contact_icon.svg") no-repeat center center;	
+		background: url("../img/aside/contact_icon.svg") no-repeat center center;	
 	}
 	.aside-logo, .rentals-icon, .servicing-icon, .rides-icon, .tours-icon, .events-icon, .contact-icon {
 		background-size: contain;
